@@ -1,3 +1,11 @@
+2007-11-11  Marcus D. Hanwell <marcus@cryos.org>
+	* libavogadro/src/painterdevice.h, libavogadro/src/povpainter.h,
+	libavogadro/src/glwidget.cpp: Exposed the loaded Molecule to the
+	PainterDevice.
+
+	* libavogadro/src/painter.h, libavogadro/src/povpainter.h,
+	libavogadro/src/glpainter.h: Added the drawTriangle function.
+
 2007-11-10  Geoffrey Hutchison  <babel@geoffhutchison.net>
 
 	* avogadro/src/mainwindow.cpp (copy, exportGraphics): Embed MDL
